[package]
name = "poi_implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = ">=0.8.0"
rand_distr = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
primitive-types = "0.2"

# Local Dependencies
pallet-template-rpc = { version = "1.0.0", path = "../../../pallets/template/src/rpc" }

# Substrate packages
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
