[package]
name = "poi_implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = ">=0.8.0"
rand_distr = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
primitive-types = "0.2"